Added checkstyle. Updated all code according to the checkstyle. Added spotbugs. Fixed issues reported by spotbugs. Added sonarlint. Fixed most issues reported by sonarlint. Added JUnit5 configuration for parallel execution. Added JaCoCo code coverage. Added pre-commit hook to run all checks.